export_error.log
2025-11-30 20:08:11 - Ошибка скрипта: Traceback (most recent call last):
  File "C:\Users\Женек\Documents\tel_bot_back3\podgotovka_ink.py", line 5, in <module>
    async def run_podgotovka_ink(message: types.Message) -> bool:
                                          ^^^^^
NameError: name 'types' is not defined. Did you mean: 'type'? Or did you forget to import 'types'?

2025-11-30 20:11:20 - Ошибка скрипта:   File "C:\Users\Женек\Documents\tel_bot_back3\podgotovka_ink.py", line 114
    # Проверяем, создал ли скрипт выходной фай
SyntaxError: expected 'except' or 'finally' block

